<resources>
    <string name="app_name">Big Data et Moi</string>
    <string name="action_settings">Settings</string>

    <!-- MainMenuFragment -->
    <string name="btn_main_application">Liste des applications</string>
    <string name="btn_main_communication">Répertoire téléphonique</string>

    <!-- SignupActivity and LoginActivity -->
    <string name="signup_btn_register">S\'inscrire</string>
    <string name="signup_already_an_account">Déjà un compte ? Connectez-vous !</string>
    <string name="signup_error_password_too_short">Veuillez entrer un mot de passe d\'au moins 6 caractères.</string>

    <string name="error_empty_email">Veuillez entrer une adresse email.</string>
    <string name="error_empty_password">Veuillez entrer un mot de passe.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>

    <string name="signin_btn_login">Connexion</string>
    <string name="signin_no_account">Pas encore de compte ? Enregistrez-vous !</string>
    <string name="signin_error_authentication_failed">Mauvais email ou mot de passe</string>

    <!-- Menu Principal -->
    <string name="accueil">Accueil</string>
    <string name="profile">Mon profil</string>
    <string name="preferences">Préférences</string>
    <string name="about">A propos</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="heure">Heure: </string>

    <!-- Ecran permission -->
    <string name="permission_manager_description">Activez ou désactivez les permissions qui seront exploitées dans l\'application.</string>
    <string name="permission_manager_title">Permissions des capteurs</string>
    <string name="permission_manager_access_location">Accès à la position de l\'appareil</string>
    <string name="permission_manager_micro">Accès au micro de l\'appareil</string>
    <string name="permission_manager_sms">Accès aux SMS de l\'appareil</string>
    <string name="permission_manager_contacts">Accès aux contacts de l\'appareil</string>
    <string name="permission_manager_bluetooth">Accès au Bluetooth de l\'appareil</string>
    <string name="permission_manager_wifi">Accès au Wi-Fi de l\'appareil</string>
    <string name="permission_manager_usage">Accès aux données d\'utilisation</string>
    <string name="title_activity_permission_settings">Permissions des capteurs</string>
    <string name="permission_btn_system_settings">Paramètres de permissions</string>

    <string name="permission_desactivee">Vous avez désactivé la permission</string>
    <string name="permission_message_information">Ces permissions sont nécessaires pour les fonctionnalités différentes de l\'application</string>

    <!-- Endroits bruyants -->
    <string name="noisy_places_title">Endroits bruyants</string>
    <string name="img_noise_descr">Diagramme circulaire indiquant les endroits visités les plus bruyants</string>
    <string name="img_color_red">Zone de couleur rouge</string>
    <string name="img_color_green">Zone de couleur verte</string>
    <string name="img_color_blue">Zone de couleur bleue</string>
    <string name="img_color_yellow">Zone de couleur jaune</string>
    <string name="red_meaning">Bruit élevé</string>
    <string name="green_meaning">Bruit moyen</string>
    <string name="blue_meaning">Bruit faible</string>
    <string name="yellow_meaning">Aucun bruit</string>

    <!-- About Activity -->
    <string name="about_title">A propos</string>
    <string name="about_subtitle1">Big Data et moi, qu\'est-ce que c\'est ?</string>
    <string name="about_description">C\'est une application réalisée par des étudiants en informatique de l\'UQAC et de l\'IUT d\'Orsay dans le but de sensibiliser
        les utilisateurs de smartphones Android sur les différentes informations que leurs applications peuvent récupérer sans qu\'ils ne le sachent.</string>
    <string name="about_subtitle2">L\'équipe de développement</string>
    <string name="group1">Groupe 1 : Interface</string>
    <string name="member1.1">Erwan (UQAC)</string>
    <string name="member1.2">Michael LIZOTTE-GAGNON (UQAC)</string>
    <string name="member1.3">Ludovic ROUSSARD (UPSUD)</string>
    <string name="member1.4">Oscar LEFEVRE (UPSUD)</string>
    <string name="member1.5">Diego DANINTHE-LOPEZ (UPSUD)</string>
    <string name="group2">Groupe 2 : Base de données</string>
    <string name="member2.1">Sébastien (UQAC)</string>
    <string name="member2.2">Pierre (UQAC)</string>
    <string name="member2.3">Vincent SCHLOSSER (UPSUD)</string>
    <string name="member2.4">Léonie BOULLIER (UPSUD)</string>
    <string name="member2.5">Joshua-Hugo VALMY (UPSUD)</string>
    <string name="group3">Groupe 3 : Fonctionnalités</string>
    <string name="member3.1">Patrick LAPOINTE (UQAC)</string>
    <string name="member3.2">Emmanuel (UQAC)</string>
    <string name="member3.3">Kévin LONGUET (UPSUD)</string>
    <string name="member3.4">Lancelot DEMAY (UPSUD)</string>
    <string name="member3.5">Maxime AUBLET (UPSUD)</string>

    <!-- Profile Activity -->
    <string name="profile_title">Mon profil</string>
    <string name="profile_name">Prénom</string>
    <string name="profile_lastname">Nom</string>
    <string name="profile_email">Adresse mail</string>
    <string name="profile_password">Mot de passe</string>
    <string name="profile_validate">Valider</string>

    <!-- Profil Erreur -->
    <string name="profile_error_name">Vous devez renseigner un prénom.</string>
    <string name="profile_error_lastname">Vous devez renseigner un nom.</string>
    <string name="profile_error_email">Vous devez renseigner une adresse mail.</string>
    <string name="profile_error_password">Vous devez renseigner un mot de passe.</string>

    <string name="welcome_title">Apprenez-en plus sur les autorisations que vous accordez à vos applications.</string>
    <string name="welcome_continue">Continuer</string>
    <string name="welcome_display">Ne plus afficher cette page</string>

    <string name="login_big_data">Big Data</string>
    <string name="login_and_me">&amp; Moi</string>
    <string name="login_login">Se connecter</string>

    <string name="register_title">Big Data et Moi permet de visualiser les données que vos applications peuvent collecter sur vous.</string>

    <string name="navigation_app_name">Big Data &amp; Moi</string>

    <string name="permission_location_explanation_title">Activez la localisation</string>
    <string name="permission_location_explanation">En autorisant la localisation, vous permettez à l\'application de savoir où vous vous trouvez.</string>

    <string name="permission_storage_explanation_title">Activez l\'accès aux fichiers</string>
    <string name="permission_storage_explanation">En autorisant l\'accès aux fichiers, vous permettez à l\'application de récupérer tous les fichiers présents sur votre appareil.</string>

    <string name="permission_message_explanation_title">Accédez aux messages</string>
    <string name="permission_message_explanation">En continuant, vous permettez à l\'application d\'accéder à vos messages.</string>

    <!--InfoActivity-->
    <string name="btnReturn">Retour</string>
    <string name="info_text1">Big Date Et Moi est une application qui met en évidence les informations que votre smartphone peut stocker sur vous.</string>
    <string name="info_text2">Comment ça marche?</string>
    <string name="info_text3">Quand vous accordez une autorisation à une application, par exemple l\'accès à vos contacts, vos photos ou votre localisation, vous permettez à celle-ci de garder en mémoire des données qui vous concernent.</string>
    <string name="info_text4">Ces données personnelles peuvent alors être utilisées par les géants du numérique à des fins commerciales.</string>
    <string name="info_text5">Big Data et Moi vous montre simplement des exemples de données personnelles qui sont mémorisées dans votre appareil lorsque vous accordez certaines permissions.</string>
    <string name="info_title">Big Data Et Moi</string>

    <!--header-->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_info">Informations</string>


    <!--Divers-->
    <string name="parametres">Paramètres</string>
    <string name="activer">Activer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_en_tant_que">Connecté en tant que</string>
    <string name="d_placements_r_cents">Déplacements récents</string>
    <string name="il_y_a_une_heure">Il y a une heure</string>

</resources>
