<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uqac.bigdataetmoi.activity.NoisyPlacesActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/img_noise_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_noise_descr"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:src="@color/red"
            android:contentDescription="@string/img_color_red"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:src="@color/lightGreen"
            android:contentDescription="@string/img_color_green"
            app:layout_constraintBottom_toTopOf="@+id/imageView14"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:src="@color/blue"
            android:contentDescription="@string/img_color_blue"
            app:layout_constraintBottom_toTopOf="@+id/imageView15"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:src="@color/yellow"
            android:contentDescription="@string/img_color_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/red_meaning"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/green_meaning"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/blue_meaning"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/yellow_meaning"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toTopOf="@+id/imageView15" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
